Fixed last test documentation issues.